packages/@adobe/spectrum-css-temp/components/card/index.css
/* ... */
.spectrum-Card-grid {
  position: relative;
  &:before {

  }
  &:after {
    pointer-events: none;
  }
}

.spectrum-Card-image {
  grid-area: preview;
}
.spectrum-Card-illustration {
  grid-area: preview;
}
.spectrum-Card-avatar {
  grid-area: avatar;
  z-index: 1;
}
.spectrum-Card-heading {
  grid-area: title;
}
.spectrum-Card-detail {
  grid-area: detail;
}
.spectrum-Card-actions {
  grid-area: actionmenu;
}
.spectrum-Card-content {
  grid-area: content;
}
.spectrum-Card-divider {
  grid-area: divider;
}
.spectrum-Card-footer {
  grid-area: footer;
}
.spectrum-Card-checkboxWrapper {
  z-index: 3;
}
.spectrum-Card-grid:before {
  z-index: -1;
}
.spectrum-Card-grid:after {
  z-index: 2;
}

/** Standard Vertical **/
/** Standalone **/
:not(.constrainedX):not(.constrainedY).spectrum-Card--default {
  border-width: var(--spectrum-card-border-size);
  border-style: solid;
  border-radius: var(--spectrum-card-border-radius);
  .spectrum-Card-grid {
    display: grid;
    grid-template-columns: var(--spectrum-card-body-padding-left) auto 1fr auto var(--spectrum-card-body-padding-right);
    grid-template-rows: minmax(var(--spectrum-card-body-padding-bottom), auto) minmax(30px, auto) auto auto auto var(--spectrum-card-body-padding-bottom);
    /* absolutely position avatar relative to the preview */
    grid-template-areas:
      "preview preview preview preview    preview"
      ".       title   detail  actionmenu ."
      ".       content content content    ."
      ".       divider divider divider    ."
      ".       footer  footer  footer     ."
      ".       .       .       .          .";

    &:before {
      content: ' ';
      inline-size: 100%;
      block-size: 100%;
      position: absolute;
      border-radius: var(--spectrum-card-border-radius);
      transition: background-color var(--spectrum-global-animation-duration-100);
    }

    &:after {
      content: ' ';
      inline-size: 100%;
      block-size: 100%;
      position: absolute;
      border-radius: var(--spectrum-card-border-radius);
      transition: background-color var(--spectrum-global-animation-duration-100);
    }
  }
  .spectrum-Card-image,
  .spectrum-Card-illustration {
    inline-size: 100%;
    /*min-inline-size: var(--spectrum-card-min-width); causes to obscure border */

    align-self: center;
    justify-self: center;

    border-start-end-radius: var(--spectrum-card-border-radius);
    border-start-start-radius: var(--spectrum-card-border-radius);
    border-block-end-width: var(--spectrum-card-border-size);
    border-block-end-style: solid;
  }
  .spectrum-Card-image {
  }
  .spectrum-Card-illustration {
    display: grid; /* not sure why flex doesn't work here */
    align-items: center;
    justify-items: center;
    inline-size: 100%;
    block-size: var(--spectrum-card-coverphoto-height); /* this may be an incorrect assumption */
  }
  .spectrum-Card-avatar {
    inline-size: var(--spectrum-global-dimension-size-100);
    block-size: var(--spectrum-global-dimension-size-100);
  }
  .spectrum-Card-heading {
    align-self: center;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    margin-inline-end: var(--spectrum-card-title-padding-right);
  }
  .spectrum-Card-detail {
    align-self: center;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
  }
  .spectrum-Card-actions {
    align-self: center;
  }
  .spectrum-Card-content {
    margin-block-start: 5px;
    margin-block-end: 5px;
  }
  .spectrum-Card-divider {
    margin-block-start: 5px;
    margin-block-end: 5px;
  }
  .spectrum-Card-footer {
    margin-block-start: 5px;
    display: flex;
    justify-content: flex-end;
  }
}
/* ... */

